<resources>
    <string name="tracking_enabled_notif">Tracking is currently enabled.Tap to Cancel</string>
    <string name="firebase_path">location</string>
    <string name="app_name">OtesHackathon</string>
    <string name="desc1">Image1</string>
    <string name="tv_gettingstarted">Getting Started</string>
    <string name="tv_otes">ONE TAP EMERGENCY SERVICES</string>
    <string name="tv_alwayswithyou">ALWAYS WITH YOU</string>
    <string name="desc2">Image2</string>
    <string name="tv_enteremail">Enter email address</string>
    <string name="tv_enterpassword">Enter password</string>
    <string name="tv_loginbutton">Login</string>
    <string name="tv_forgotpassword">Forgot Password?</string>
    <string name="tv_didnthaveanaccount">Do not have an account? Signup</string>
    <string name="tv_signup">Signup</string>
    <string name="tv_createaccount">CREATE ACCOUNT</string>
    <string name="desc3">Image3</string>
    <string name="tv_signuppage">SIGNUP</string>
    <string name="tv_rectangularbar"></string>
    <string name="desc4">Image4</string>
    <string name="desc5">Image5</string>
    <string name="tv_viaemail">Via Email</string>
    <string name="tv_viagoogle">Via Google</string>
    <string name="desc6">Image6</string>
    <string name="tv_email">Email</string>
    <string name="tv_username">Username</string>
    <string name="tv_password">Password</string>
    <string name="tv_passwordsignupinfo">Password</string>
    <string name="tv_phno">Mobile Number (Optional)</string>
    <string name="tv_alreadyhaveanaccount">Already have an account? Login</string>
    <string name="desc7">Image7</string>
    <string name="tv_resetpass">Reset Password</string>
    <string name="tv_pleaseenter">Please enter your email address to request a password reset.</string>
    <string name="img1">Image11</string>
    <string name="img2">Image12</string>
    <string name="img3">Image13</string>
    <string name="img4">Image14</string>
    <string name="img5">Image15</string>
    <string name="img6">Image16</string>
    <string name="img7">Image17</string>
    <string name="img8">Image18</string>
    <string name="img9">Image19</string>
    <string name="img10">Image20</string>
    <string name="img11">Image21</string>
    <string name="img12">Image22</string>
    <string name="img13">Image23</string>
    <string name="tv_providefacilityotes">Provides facility to send instant emergency/SOS messages to your family members and get alarm messages through notifications. This app helps to find nearby emergency service providers by using GPS tracking.</string>
    <string name="tv_nearby">NEARBY SERVICES</string>
    <string name="tv_nearbyservices">Helps you to find nearby emergency services providers around your locality.</string>
    <string name="tv_firstaid">FIRST AID/ PRECAUTIONARY STEPS</string>
    <string name="tv_firstprimary">Provides you the precautionary steps to be taken during emergency/disasters and the first aid/ primary steps to be provided to the patients during emergency/disasters.</string>
    <string name="tv_broadc">CREATE A NEW BROADCAST</string>
    <string name="tv_broadcastreci">Provides you the facility to send SOS messages to the family members/recipients by using social media(WhatsApp). At first, you have to create a new broadcast on WhatsApp to send messages.</string>
    <string name="tv_broad">BROADCAST RECIPIENTS</string>
    <string name="tv_next">Next</string>
    <string name="tv_broadreci">Already have a broadcast? Leave it</string>
    <string name="tv_sendalert">SEND ALERT MESSAGES</string>
    <string name="tv_precautionary">PRECAUTIONARY STEPS</string>
    <string name="tv_firstaidAAAA">FIRST AID</string>
    <string name="tv_finding">NEARBY SERVICES</string>
    <string name="tv_emergency">EMERGENCY CALL</string>
    <string name="tv_chooselang">CHOOSE LANGUAGE</string>
    <string name="tv_earthquake">EARTHQUAKE</string>
    <string name="tv_pre1">Precautionary steps to be followed:</string>
    <string name="tv_pointearthquake_1">•\If you\'re outdoors, stay in the open away from power lines or anything that might fall. Stay away from buildings (stuff might fall off the building or the building could fall on you).</string>
    <string name="tv_pointearthquake_2">•\Don\'t use matches, candles, or any flame. Broken gas lines and fire don\'t mix.</string>
    <string name="tv_pointearthquake_3">•\If you\'re in a car, stop the car and stay inside the car until the earthquake stops.</string>
    <string name="tv_pointearthquake_4">•\Don\'t use elevators (they\'ll probably get stuck ).</string>
    <string name="tv_flood">FLOOD</string>
    <string name="tv_pointflood_1">•\Heed evacuation warnings. If there is any possibility of a flash flood, move immediately to higher ground.</string>
    <string name="tv_pointflood_2">•\If possible, bring in outdoor furniture and move important items to an upper floor, above possible flood levels.</string>
    <string name="tv_pointflodd_3">•\Do not walk through flooded areas. It can be difficult to tell how deep the water is and what lies underneath the water that could hurt you. Even shallow, moving water can make you fall.</string>
    <string name="tv_pointflood_4">•\If you have to walk in water, wherever possible, walk where the water is not moving. Use a stick to check the firmness of the ground in front of you.</string>
    <string name="tv_discat">DISASTER/EMERGENCY CATEGORY</string>
    <string name="tv_landslide">LANDSLIDE</string>
    <string name="tv_videolink">Video Link:</string>
    <string name="tv_videarthquake">https://youtu.be/BLEPakj1YTY</string>
    <string name="tv_vidflood">https://youtu.be/43M5mZuzHF8</string>
    <string name="tv_firstaidd">FIRST AID INFORMATION</string>
    <string name="tv_diarrhoea">1. Cholera(Medications):</string>
    <string name="tv_medchl1">•	Rehydration(for Mild Cases).</string>
    <string name="tv_medchl2">•	Doxycycline(for Adults in Severe Case).</string>
    <string name="tv_medchl3">•	Azithromycin(for Children and Pregnant Woman in Severe Case).</string>
    <string name="tv_vidlandslide">https://youtu.be/0l3ifBTMTvk</string>
    <string name="tv_pointland_1">•\Never cross a road with water or mud flowing. Never cross a bridge if you see a
        flow approaching. It can grow faster and larger too quickly for you to escape.</string>
    <string name="title_activity_maps">Map</string>
    <string name="tv_police">POLICE</string>
    <string name="tv_fire">FIRE BRIGADE</string>
    <string name="tv_ambu">AMBULANCE</string>
    <string name="tv_hospitals">NEARBY HEALTHCARE SYSTEMS</string>
    <string name="tv_whatsapp">WHATSAPP</string>
    <string name="tv_facebook">FACEBOOK</string>
    <string name="tv_insta">INSTAGRAM</string>
    <string name="tv_sb1">•	For all snake bites, provide emergency care including cardiopulmonary resuscitation (CPR) if needed.</string>
    <string name="tv_sb2">•	Avoid washing the bite area because any venom left on the skin can help identify the snake.</string>
    <string name="tv_sb3">•	Apply a pressure immobilisation bandage and keep the person calm and as still as possible until medical help arrives.</string>
    <string name="tv_sb">2. Snake Bite (Medications)</string>
    <string name="bleeding">3. Bleeding</string>
    <string name="point1">1. Cover the wound with a gauze or a cloth.</string>
    <string name="point2">2. Apply direct pressure to stop the blood flow</string>
    <string name="point3">3. Don\'t remove the cloth. Add more layers if needed. The cloth will help clots form to stop the flow.</string>
    <string name="burns">4. Burns</string>
    <string name="burnp1">1. Flush the burned area with cool running water for several minutes. Do not use ice.</string>
    <string name="burnp2">2. Apply a light gauze bandage.</string>
    <string name="burnp3">3. Do not apply ointments, butter, or oily remedies to the burn.</string>
    <string name="burnp4">4. Take ibuprofen or acetaminophen for pain relief if necessary</string>
    <string name="blisters">5. Blisters</string>
    <string name="bp1">1. Use a sterilized needle and make small punctures at the edge of the blister.</string>
    <string name="bp2">2. Express the fluid.</string>
    <string name="bp3">3. Then apply antibiotic ointment.</string>
    <string name="bp4">4. Cover it to protect it from further rubbing and pressure.</string>
    <string name="Fractures">6. Fractures</string>
    <string name="fra1">1.Don\'t try to straighten it.</string>
    <string name="fra2">2. Stabilize the limb using a splint and padding to keep it immobile.</string>
    <string name="fra3">3. Put a cold pack on the injury, avoiding placing ice directly on the skin.</string>
    <string name="fra4">4. Elevate the extremity.</string>
    <string name="nosebleed">7. Nosebleed</string>
    <string name="n1">1. Lean slightly forward, not back.</string>
    <string name="n2">2. Pinch the nose just below the bridge. Don\'t pinch the nostrils closed by pinching lower.</string>
    <string name="n3">3. Check after five minutes to see if bleeding has stopped. If not, continue pinching and check after another 10 minutes.</string>
    <string name="n4">4. You can also apply a cold pack to the bridge of the nose while pinching.</string>
    <string name="BeeStings">8 Bee Stings</string>
    <string name="b1">1. Get the stinger out any way you can to prevent more venom being delivered. It\'s a myth that any particular way is better or worse.</string>
    <string name="b2">2. If the person is known to be allergic to bee stings, use an EpiPen to prevent anaphylaxis or call 911 if none is available.</string>
    <string name="b3">"3. Use a cold pack to reduce swelling at the site, but take care not to cause frostbite. "</string>
    <string name="b4">"4. Use an antihistamine like Benadryl (diphenhydramine) to reduce swelling and itching. "</string>
    <string name="appwidget_text">EMERGENCY</string>
    <string name="add_widget">Add widget</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="police_station">POLICE STATION</string>
    <string name="hospitals">HOSPITALS</string>
    <string name="nearby_police_station">NEARBY POLICE STATION</string>
    <string name="LSp2">Stay inside Take cover under a desk, table, or other piece of sturdy furniture</string>
    <string name="LSP3">If outdoors: Try to  run to the nearest high ground in a direction away from the path of landslide</string>
    <string name="LSp4">Be especially alert when driving— watch for collapsed pavement, mud, fallen rocks and other indications of possible debris flow</string>


</resources>
