<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".disaster1">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_earthquake"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline74"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline73"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pre1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline74"
        app:layout_constraintEnd_toStartOf="@+id/guideline76"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline73"
        app:layout_constraintVertical_bias="0.144" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent=".0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="412dp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="377dp"
        android:layout_height="96dp"
        android:text="@string/tv_pointearthquake_1"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline74"
        app:layout_constraintEnd_toStartOf="@+id/guideline76"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline73"
        app:layout_constraintVertical_bias="0.62" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_pointearthquake_3"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline76"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="377dp"
        android:layout_height="43dp"
        android:text="@string/tv_pointearthquake_2"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline74"
        app:layout_constraintEnd_toStartOf="@+id/guideline76"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="@+id/guideline73"
        app:layout_constraintVertical_bias="0.71000004" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pointearthquake_4"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84000003" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_videolink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/youtube_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline74"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline73"
        app:layout_constraintVertical_bias="0.29000002" />


</androidx.constraintlayout.widget.ConstraintLayout>