<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".disaster3">

    <TextView
        android:id="@+id/textView38"
        android:layout_width="410dp"
        android:layout_height="71dp"
        android:background="@color/design_default_color_primary"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_discat"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/earthquake"
        android:layout_width="344dp"
        android:layout_height="54dp"
        android:background="@android:color/holo_blue_light"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_earthquake"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <Button
        android:id="@+id/flood"
        android:layout_width="344dp"
        android:layout_height="54dp"
        android:background="@android:color/holo_blue_light"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_flood"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254" />

    <Button
        android:id="@+id/landslide"
        android:layout_width="344dp"
        android:layout_height="54dp"
        android:background="@android:color/holo_blue_light"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_landslide"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373" />
</androidx.constraintlayout.widget.ConstraintLayout>